--- a/KubeWorkShop/MinIO/aio-minio.yaml
+++ b/KubeWorkShop/MinIO/aio-minio.yaml
@@ -66,7 +66,7 @@ spec:
         - "while [ $(curl -sw '200' -k -x GET https://keycloak.infra.sololab/realms/freeipa-realm/.well-known/openid-configuration -o /dev/null) -ne 200 ]; do sleep 5; echo 'Waiting for the keycloak...'; done"
   containers:
     - name: minio
-      image: quay.io/minio/minio:RELEASE.2023-03-24T21-41-23Z
+      image: quay.io/minio/minio:RELEASE.2023-04-07T05-28-58Z
       imagePullPolicy: IfNotPresent
       resources:
         limits:
@@ -89,6 +89,23 @@ spec:
         # should match with the url config
         - name: MINIO_BROWSER_REDIRECT_URL
           value: https://minio.infra.sololab/console/
+
+        # https://min.io/docs/minio/linux/reference/minio-server/minio-server.html#openid-identity-management
+        - name:  MINIO_IDENTITY_OPENID_CONFIG_URL
+          value: https://keycloak.infra.sololab/realms/sololab/.well-known/openid-configuration
+          
+        - name:  MINIO_IDENTITY_OPENID_CLIENT_ID
+          value: minio
+          
+        - name:  MINIO_IDENTITY_OPENID_CLIENT_SECRET
+          value: z2KqVuwXQ28vseV5ITk8st16r5fZfoQ8
+          
+        - name:  MINIO_IDENTITY_OPENID_CLAIM_NAME
+          value: policy
+          
+        - name:  MINIO_IDENTITY_OPENID_SCOPES
+          value: openid,email
+          
       # https://blog.csdn.net/fly910905/article/details/104706105
       # https://github.com/minio/minio/blob/master/Dockerfile
       args:
