--- a/AnsibleWorkShop/builder/execution-environment-with_semi_proxy.yml
+++ b/AnsibleWorkShop/builder/execution-environment-with_semi_proxy.yml
@@ -21,12 +21,19 @@ dependencies:
 additional_build_steps:
   append: 
     - ARG PROXY
-    - ARG TERRAFORM_VERSION=1.3.6
+    - ARG TERRAFORM_VERSION=1.4.4
 
     - RUN cd /tmp && 
       curl -LO https://releases.hashicorp.com/terraform/$TERRAFORM_VERSION/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && 
       unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && 
       install -o root -g root -m 0755 terraform /usr/local/bin/terraform
+
+    - ARG VAULT_VERSION=1.13.1
+
+    - RUN cd /tmp && 
+      curl -LO https://releases.hashicorp.com/vault/$VAULT_VERSION/vault_${VAULT_VERSION}_linux_amd64.zip && 
+      unzip vault_${VAULT_VERSION}_linux_amd64.zip && 
+      install -o root -g root -m 0755 vault /usr/local/bin/vault
 
     - RUN curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl && 
       ls -al /usr/local/bin/kubectl && 
