--- a/AnsibleWorkShop/project/debug/Get-RemoteIP.yml
+++ b/AnsibleWorkShop/project/debug/Get-RemoteIP.yml
@@ -1,7 +1,7 @@
 # code: language=ansible
 ---
 - hosts: localhost
-  gather_facts: 
+  gather_facts: false
   tasks:
     - name: get remote ip
       ansible.builtin.setup:
