--- a/AnsibleWorkShop/project/Deploy-KeyCloakInPodman.yml
+++ b/AnsibleWorkShop/project/Deploy-KeyCloakInPodman.yml
@@ -2,24 +2,78 @@
 ---
 - hosts: kube-1 # kube-2
   gather_facts: yes
-  tasks:
-    - name: incloude vars
-      ansible.builtin.include_vars:
-        file: vars/podman_play-keycloak.yml
+  vars:
+    ipa:
+      hostname: ipa.infra.sololab
 
-     # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
-    - name: run role ansible-podman-rootless-provision
+    podman_rootless_play:
+      vars_podman_host: kube-1
+      vars_podman_uri:
+        scheme_authority: http://d # http://d/ ← (default), https://docs.podman.io/en/latest/markdown/podman-system-service.1.html
+        api_version: v4.4.1 # v4.0.0 ← (default)
+        unix_socket: /run/user/1000/podman/podman.sock # socket file path for podman, e.g. /run/user/1000/podman/podman.sock
+      vars_podman_play:
+        state: absent # absent / present
+        timeout: 600
+        kube_file: 
+          host: localhost
+          path: /KubeWorkShop/KeyCloak/aio-keycloak-offical.yaml
+          # content: "{{ rendered }}"
+        absent:
+          query_params:
+            force: false
+      vars_podman_generate_systemd:
+        generate:
+          path_params: 
+            name: keycloak
+          query_params:
+            useName: true
+      vars_service:
+        podman_pod:
+          user_scope:
+            skipped: false
+            enabled: true
+            state: started
+
+    dns:
+      key_name: "keySololab"
+      key_secret: "j/2DR2zkVAyDHL2XjE731sMt9s6cmRhXE6niScAgHA0="
+      key_algorithm: "hmac-sha256"
+      server: '192.168.255.31'
+      zone: infra.sololab
+      record: keycloak
+      value: '192.168.255.32'
+      type: 'A'
+      state: "{{ podman_rootless_play.vars_podman_play.state }}"
+
+    ingress_file: /KubeWorkShop/KeyCloak/traefik-keycloak.yaml
+  tasks:
+    - name: Invoke podman-rootless-play
       ansible.builtin.include_role:
         name: ansible-podman-rootless-play
+      vars: 
+        vars_podman_host: "{{ podman_rootless_play.vars_podman_host }}"
+        vars_podman_uri: "{{ podman_rootless_play.vars_podman_uri }}"
+        vars_podman_play: "{{ podman_rootless_play.vars_podman_play }}"
+        vars_podman_generate_systemd: "{{ podman_rootless_play.vars_podman_generate_systemd }}"
+        vars_service: "{{ podman_rootless_play.vars_service }}"
 
-    - name: present traefik dynamic conf
+    - name: Config reverse proxy
       block:
-        - name: present traefik dynamic conf dir
-          ansible.builtin.file:
-            path: /home/{{ ansible_user }}/traefik/
-            state: directory
+        - name: Ensure dns record is present
+          community.general.nsupdate: "{{ dns }}"
+          delegate_to: localhost
 
-        - name: copy traefik dynamic config to dir
+        - name: present route config
           ansible.builtin.copy:
-            src: /KubeWorkShop/KeyCloak/traefik-keycloak.yaml
-            dest: /home/{{ ansible_user }}/traefik/traefik-keycloak.yaml
+            src: "{{ ingress_file }}"
+            dest: /home/{{ ansible_user }}/traefik/
+          when: 
+            - podman_rootless_play.vars_podman_play.state == 'present'
+
+        - name: absent route config
+          ansible.builtin.file:
+            path: /home/{{ ansible_user }}/traefik/{{ ingress_file | basename }}
+            state: absent
+          when: 
+            - podman_rootless_play.vars_podman_play.state == 'absent'
