--- a/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml
+++ b/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml
@@ -7,8 +7,8 @@ http:
       # https://www.teanote.pub/archives/247
       # https://doc.traefik.io/traefik/routing/routers/#tls
       # will terminate the TLS request
-      tls: 
-        certResolver: freeipa
+      # tls: 
+      #   certResolver: freeipa
 
 # tls:
 #   stores:
