--- a/KubeWorkShop/Vault/aio-vault-before.yaml
+++ b/KubeWorkShop/Vault/aio-vault-before.yaml
@@ -38,6 +38,15 @@ data:
     cluster_addr = "http://127.0.0.1:8201"
 ---
 apiVersion: v1
+kind: Secret
+metadata:
+  name:  vault
+type: Opaque
+data:
+  Unseal-Vault.sh: |
+    {{ unseal_script }}
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: vault
@@ -73,6 +82,9 @@ spec:
           subPath: config.hcl
         - name: vault_data
           mountPath: /vault/data
+        - name: unseal_script
+          mountPath: /mnt/Unseal-Vault.sh
+          subPath: Unseal-Vault.sh
   volumes:
     - name: vault_config
       # https://kubernetes.io/docs/concepts/storage/volumes/#configmap
@@ -84,5 +96,8 @@ spec:
     - name: vault_data
       persistentVolumeClaim:
         claimName: vault
+    - name: unseal_script
+      secret:
+        secretName: vault
         
   restartPolicy: Never
